优化及测试

--- a/Src/Region.Utils/Region.Utils.csproj
+++ b/Src/Region.Utils/Region.Utils.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SpellIndexUtils.cs" />
+    <Compile Include="PinYinUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
